<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image Viewer</string>
    <string name="information_text">Done by Jethro Muller</string>
    <string name="action_info">Information</string>
    <string name="galleryContentDescription">Holds the images</string>
    <string name="imageDescription">Grid Image</string>
    <string name="title_activity_information">Information</string>
    <string name="action_settings">Settings</string>
    <string name="information_web_address">www.jethromuller.co.za</string>
    <string name="information_email">git@jethromuller.co.za</string>
    <string name="title_activity_single_image_view">Image</string>
    <string name="hello_world">Hello world!</string>
    <string name="image_description">Image</string>
    <string name="previous_image_description">Previous Image</string>
    <string name="start_slideshow_description">Start Slideshow</string>
    <string name="next_image_description">Next Image</string>

</resources>
