<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ff2b2b2b"
    tools:context="za.co.jethromuller.imageviewer.single_image_view"
    android:weightSum="1">

    <ImageSwitcher
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/imageView"
        android:contentDescription="@string/image_description"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="50dp">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/prev_button"
            android:enabled="true"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:contentDescription="@string/previous_image_description"
            android:src="@drawable/prev"
            android:onClick="previousImage"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/start_slideshow_button"
            android:enabled="true"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:contentDescription="@string/start_slideshow_description"
            android:src="@drawable/start_slideshow"
            android:onClick="startSlideShow"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/next_button"
            android:enabled="true"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:contentDescription="@string/next_image_description"
            android:src="@drawable/next"
            android:onClick="nextImage"/>
        </LinearLayout>
</LinearLayout>
